--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -107,7 +107,7 @@
       border-top: 1px solid lightgrey;
       text-align: center;
       position: relative;
-      padding: 15px 0 5px;
+      padding: 15px 0 5px 4px;
       height: 55px;
       width: 120px; }
     .appointment .tg tbody .dynPatient {
@@ -115,10 +115,18 @@
       text-align: left;
       width: 100%;
       padding-left: 5px; }
+      .appointment .tg tbody .dynPatient .statusClr {
+        background: #000;
+        width: 5px;
+        position: absolute;
+        height: 54px;
+        display: inline-block;
+        left: 0;
+        top: 0; }
     .appointment .tg tbody .dynSlot {
       position: absolute;
       top: 2px;
-      left: 6px;
+      left: 8px;
       font-size: 0.7rem;
       color: #7d7d7d; }
     .appointment .tg tbody i {
