--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -9,14 +9,14 @@
     flex: initial!important;
   }
   .rt-tbody{
-    margin-top: 29px;}
+    margin-top: 30px;}
   .rt-th {
     background: #34b8bc !important;
     color: #fff !important;
     text-transform: uppercase;
     font-weight: normal !important;
     font-size: 0.8rem;
-    height: 30px;
+    min-height: 30px!important;
   }
   button {
     margin-left: 0;
