--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
@@ -4,6 +4,7 @@
 }
 
 .hptl-phase1-op-add-billing-form {
+  padding-top: 5px;
   .primary-details {
     .primary-box-container {
       padding-top: 12.5px;
