--- a/client/src/Components/Pharmacy/PointOfSale/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/DisplayInsuranceDetails/PrimaryInsurance/PrimaryInsuranceDetails.scss
@@ -6,9 +6,9 @@
 
   .secondary-details {
     padding: 5px;
-    .secondary-box-container {
-      // padding: 5px;
-    }
+    // .secondary-box-container {
+    //   // padding: 5px;
+    // }
   }
 
   mark {
