--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -24,7 +24,7 @@
   i.fa-pen,
   i.fa-trash-alt,
   i.fa-save,
-  i.fa-times {
+  i.fa-times,.fa-barcode,.fa-check,.fa-flask,.fa-file-signature,.fa-walking {
     cursor: pointer;
     border: 1px solid #44b8bd;
     height: 28px;
@@ -42,7 +42,7 @@
   i.fa-pen:hover,
   i.fa-trash-alt:hover,
   i.fa-save:hover,
-  i.fa-times:hover {
+  i.fa-times:hover,.fa-barcode:hover,.fa-check:hover,.fa-flask:hover,.fa-file-signature:hover,.fa-walking:hover {
     background: #44b8bd;
     color: #fff;
   }
