Patient MRD Module Structure, MRD List with filter, Patient MRD Screen with Encouters

--- a/client/src/Components/MRD/PatientMRD/patient_mrd.css
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.css
@@ -10,7 +10,8 @@
     color: #858585; }
   .patient-mrd .patientProfile .patientInfo-Top .backBtn {
     border-right: 1px solid #e1e1e1;
-    padding-right: 10px; }
+    padding-right: 10px;
+    padding-left: 10px; }
     .patient-mrd .patientProfile .patientInfo-Top .backBtn button {
       height: 60px;
       border: 1px solid #e1e1e1;
@@ -167,39 +168,57 @@
       .patient-mrd .patientProfile .patientTopNav .patient-quick-info li:hover p {
         display: block; }
 
-.patient-mrd .patientProfile .patientContentArea {
+.patient-mrd .patientProfile .componentRenderArea {
   margin: 120px 10px 0;
   z-index: 1;
   width: 100%; }
-  .patient-mrd .patientProfile .patientContentArea .generalInfo, .patient-mrd .patientProfile .patientContentArea .chiefComplaint, .patient-mrd .patientProfile .patientContentArea .vitals, .patient-mrd .patientProfile .patientContentArea .diagnosis, .patient-mrd .patientProfile .patientContentArea .investigation, .patient-mrd .patientProfile .patientContentArea .medication, .patient-mrd .patientProfile .patientContentArea .procedures {
+  .patient-mrd .patientProfile .componentRenderArea .generalInfo,
+  .patient-mrd .patientProfile .componentRenderArea .chiefComplaint,
+  .patient-mrd .patientProfile .componentRenderArea .vitals,
+  .patient-mrd .patientProfile .componentRenderArea .diagnosis,
+  .patient-mrd .patientProfile .componentRenderArea .investigation,
+  .patient-mrd .patientProfile .componentRenderArea .medication,
+  .patient-mrd .patientProfile .componentRenderArea .procedures {
     border-top: 1px solid #e1e1e1;
     padding-top: 10px;
     padding-bottom: 10px; }
-    .patient-mrd .patientProfile .patientContentArea .generalInfo h6, .patient-mrd .patientProfile .patientContentArea .chiefComplaint h6, .patient-mrd .patientProfile .patientContentArea .vitals h6, .patient-mrd .patientProfile .patientContentArea .diagnosis h6, .patient-mrd .patientProfile .patientContentArea .investigation h6, .patient-mrd .patientProfile .patientContentArea .medication h6, .patient-mrd .patientProfile .patientContentArea .procedures h6 {
+    .patient-mrd .patientProfile .componentRenderArea .generalInfo h6,
+    .patient-mrd .patientProfile .componentRenderArea .chiefComplaint h6,
+    .patient-mrd .patientProfile .componentRenderArea .vitals h6,
+    .patient-mrd .patientProfile .componentRenderArea .diagnosis h6,
+    .patient-mrd .patientProfile .componentRenderArea .investigation h6,
+    .patient-mrd .patientProfile .componentRenderArea .medication h6,
+    .patient-mrd .patientProfile .componentRenderArea .procedures h6 {
       font-size: 0.8rem;
       font-weight: bold; }
-    .patient-mrd .patientProfile .patientContentArea .generalInfo span, .patient-mrd .patientProfile .patientContentArea .chiefComplaint span, .patient-mrd .patientProfile .patientContentArea .vitals span, .patient-mrd .patientProfile .patientContentArea .diagnosis span, .patient-mrd .patientProfile .patientContentArea .investigation span, .patient-mrd .patientProfile .patientContentArea .medication span, .patient-mrd .patientProfile .patientContentArea .procedures span {
+    .patient-mrd .patientProfile .componentRenderArea .generalInfo span,
+    .patient-mrd .patientProfile .componentRenderArea .chiefComplaint span,
+    .patient-mrd .patientProfile .componentRenderArea .vitals span,
+    .patient-mrd .patientProfile .componentRenderArea .diagnosis span,
+    .patient-mrd .patientProfile .componentRenderArea .investigation span,
+    .patient-mrd .patientProfile .componentRenderArea .medication span,
+    .patient-mrd .patientProfile .componentRenderArea .procedures span {
       font-weight: normal;
       margin-left: 3px; }
-  .patient-mrd .patientProfile .patientContentArea .generalInfo {
+  .patient-mrd .patientProfile .componentRenderArea .generalInfo {
     border-top: none; }
-  .patient-mrd .patientProfile .patientContentArea .investigation .row .col-lg-12 {
+  .patient-mrd .patientProfile .componentRenderArea .investigation .row .col-lg-12 {
     border-bottom: 1px dotted #e1e1e1;
     padding-top: 3px;
     padding-bottom: 3px; }
-    .patient-mrd .patientProfile .patientContentArea .investigation .row .col-lg-12 h6 span {
+    .patient-mrd .patientProfile .componentRenderArea .investigation .row .col-lg-12 h6 span {
       float: right;
       text-transform: uppercase;
       font-size: 0.7rem;
       color: #0066ff; }
-  .patient-mrd .patientProfile .patientContentArea .smallh6 {
+  .patient-mrd .patientProfile .componentRenderArea .smallh6 {
     color: #00bbbd;
     font-size: 0.8rem;
     margin-bottom: 5px;
     font-weight: normal; }
-  .patient-mrd .patientProfile .patientContentArea .danger {
+  .patient-mrd .patientProfile .componentRenderArea .danger {
     color: #ff5c5c; }
-  .patient-mrd .patientProfile .patientContentArea .borderVitals {
+  .patient-mrd .patientProfile .componentRenderArea .borderVitals {
     border: 1px solid #e1e1e1;
     margin: 0 3px 5px;
     border-radius: 5px; }
