--- a/client/src/Components/MRD/PatientMRD/patient_mrd.scss
+++ b/client/src/Components/MRD/PatientMRD/patient_mrd.scss
@@ -1,4 +1,4 @@
-.patient-mrd{
+.patient-mrd {
   .patientProfile {
     .patientInfo-Top {
       background: white;
@@ -7,15 +7,16 @@
       width: 100%;
       position: fixed;
       z-index: 999;
-  
+
       div {
         float: left;
         color: #858585;
       }
-  
+
       .backBtn {
         border-right: 1px solid #e1e1e1;
         padding-right: 10px;
+        padding-left: 10px;
         button {
           height: 60px;
           border: 1px solid #e1e1e1;
@@ -26,7 +27,7 @@
           margin-bottom: 5px;
         }
       }
-  
+
       .patientImg {
         margin: 1px 10px;
         border-radius: 4px;
@@ -95,7 +96,7 @@
         span {
           display: inline-block;
           margin-right: 8px;
-  
+
           b {
             color: #34b8bc;
           }
@@ -207,57 +208,64 @@
         }
       }
     }
-    .patientContentArea {
+    .componentRenderArea {
       margin: 120px 10px 0;
       z-index: 1;
       width: 100%;
 
-      .generalInfo,.chiefComplaint,.vitals,.diagnosis,.investigation,.medication,.procedures{
-        
-    border-top: 1px solid #e1e1e1;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    h6{font-size: 0.8rem; font-weight: bold;}
-        span{
+      .generalInfo,
+      .chiefComplaint,
+      .vitals,
+      .diagnosis,
+      .investigation,
+      .medication,
+      .procedures {
+        border-top: 1px solid #e1e1e1;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        h6 {
+          font-size: 0.8rem;
+          font-weight: bold;
+        }
+        span {
           font-weight: normal;
           margin-left: 3px;
         }
       }
-      .generalInfo{border-top: none;}
-      .investigation{
-        .row{
-          .col-lg-12{
+      .generalInfo {
+        border-top: none;
+      }
+      .investigation {
+        .row {
+          .col-lg-12 {
             border-bottom: 1px dotted #e1e1e1;
-            padding-top:3px; 
-            padding-bottom:3px;
-            h6{
-              span{
-                float:right;
+            padding-top: 3px;
+            padding-bottom: 3px;
+            h6 {
+              span {
+                float: right;
                 text-transform: uppercase;
                 font-size: 0.7rem;
-                color:#0066ff;
+                color: #0066ff;
               }
             }
           }
         }
-
       }
-      .smallh6{
-
+      .smallh6 {
         color: #00bbbd;
         font-size: 0.8rem;
         margin-bottom: 5px;
         font-weight: normal;
-          }
-          .danger{
-            color: #ff5c5c;
-          }
-          .borderVitals{
-
-            border: 1px solid #e1e1e1;
-            margin: 0 3px 5px;
-            border-radius: 5px;
-          }
+      }
+      .danger {
+        color: #ff5c5c;
+      }
+      .borderVitals {
+        border: 1px solid #e1e1e1;
+        margin: 0 3px 5px;
+        border-radius: 5px;
+      }
     }
   }
 }
