--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -495,6 +495,38 @@ body {
 :global .hptl-phase1-master-footer .app_bar {
   background: #000000; }
 
+:global .tool {
+  cursor: help;
+  position: relative; }
+
+:global .tool::before, :global .tool::after {
+  position: absolute;
+  left: 50%;
+  opacity: 0;
+  z-index: -100; }
+
+:global .tool:hover::before, :global .tool:focus::before, :global .tool:hover::after, :global .tool:focus::after {
+  opacity: 1;
+  z-index: 100; }
+
+:global .tool::before {
+  border-style: solid;
+  border-width: 1em .75em 0 .75em;
+  border-color: #3e474f transparent transparent transparent;
+  bottom: 100%;
+  margin-left: -.5em;
+  content: " "; }
+
+:global .tool::after {
+  background: #3e474f;
+  border-radius: .25em;
+  bottom: 180%;
+  color: white;
+  width: 17.5em;
+  padding: 1em;
+  margin-left: -8.75em;
+  content: attr(data-tip); }
+
 label {
   margin-bottom: 0px;
   font-size: 0.75rem;
@@ -978,3 +1010,6 @@ th {
   .subFooter-btn button {
     float: right;
     margin-left: 10px; }
+
+.swal2-container {
+  z-index: 99999 !important; }
