--- a/client/src/Components/PreApproval/PreApprovalStatus/Attachments/Attachments.scss
+++ b/client/src/Components/PreApproval/PreApprovalStatus/Attachments/Attachments.scss
@@ -8,7 +8,6 @@
   .form-details {
     padding-bottom: 0px;
   }
-
   .attachment-section {
     border: 1px solid #d3d3d3;
     margin: 10px;
@@ -44,4 +43,10 @@
     position: relative;
     background-color: #eaeaea;
   }
+}
+
+.algaehUploadFile{
+  border: 1px solid #c0c0c0;
+  height: 33px;
+  border-radius: 5px;
 }
