--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -634,42 +634,6 @@ body {
 
 
 
-  .tool {
-    cursor : help;
-    position : relative;
-  }
-  
-  .tool::before, .tool::after {
-    position : absolute;
-    left : 50%;
-    opacity : 0;
-    z-index: -100;
-  }
-  
-  .tool:hover::before, .tool:focus::before, .tool:hover::after, .tool:focus::after {
-    opacity : 1;
-    z-index: 100;
-  }
-  
-  .tool::before {
-    border-style : solid;
-    border-width : 1em .75em 0 .75em;
-    border-color : #3e474f transparent transparent transparent;
-    bottom : 100%;
-    margin-left : -.5em;
-    content : " ";
-  }
-  
-  .tool::after {
-    background : #3e474f;
-    border-radius : .25em;
-    bottom : 180%;
-    color : white;
-    width : 17.5em;
-    padding: 1em;
-    margin-left : -8.75em;
-    content : attr(data-tip);
-  }
 
 
 
@@ -1345,4 +1309,63 @@ th {
 }
 .swal2-container{
   z-index: 99999!important;
+}
+
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+  position: relative;
+  z-index:999999;
+  cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+  visibility: hidden;
+  opacity: 1;
+  pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
+  position: absolute;
+  bottom: 100%;
+  left: 100%;
+  margin-bottom: 5px;
+  margin-left: -80px;
+  padding: 7px;
+  width: auto;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  background-color: hsla(0, 0%, 20%, 0.9);
+  color: #fff;
+  content: attr(data-tooltip);
+  text-align: center;
+  font-size: 0.6rem;
+  line-height: 1.2;
+}
+
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  width: 0;
+  border-top: 5px solid #000;
+  border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  content: " ";
+  font-size: 0;
+  line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+  visibility: visible;
+  opacity: 1;
 }
