UI Cleanup Medical Workbench > Plan

--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -15,6 +15,7 @@
     .backBtn {
       border-right: 1px solid #e1e1e1;
       padding-right: 10px;
+      padding-left: 10px;
       button {
         height: 60px;
         border: 1px solid #e1e1e1;
