--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -9,7 +9,7 @@
   .ReactTable .rt-tbody {
     margin-top: 30px; }
   .ReactTable .rt-th {
-    background: #34b8bc !important;
+    background: #8c8c8c !important;
     color: #fff !important;
     text-transform: uppercase;
     font-weight: normal !important;
