--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -256,6 +256,9 @@ body {
     }
   }
 
+  .paddin-bottom-5 {
+    padding-bottom: 4px;
+  }
   .htpl1-phase1-btn-secondary {
     font-size: 0.8rem;
     text-transform: uppercase;
