--- a/client/src/Components/PatientProfile/Subjective/subjective.css
+++ b/client/src/Components/PatientProfile/Subjective/subjective.css
@@ -8,10 +8,12 @@
   text-align: center; }
 
 .subjective .customTable th {
-  background: #ebfffd;
+  background: #8c8c8c;
   text-transform: uppercase;
   font-size: 0.7rem !important;
-  min-width: auto !important; }
+  min-width: auto !important;
+  color: #fff;
+  font-weight: normal; }
 
 .subjective .customTable td {
   min-width: auto !important;
