--- a/client/src/Components/PatientProfile/Subjective/subjective.scss
+++ b/client/src/Components/PatientProfile/Subjective/subjective.scss
@@ -12,10 +12,12 @@
   }
   .customTable {
     th {
-      background: #ebfffd;
+      background: #8c8c8c;
       text-transform: uppercase;
       font-size: 0.7rem !important;
       min-width: auto !important;
+      color: #fff;
+      font-weight: normal;
     }
     td {
       min-width: auto !important;
