--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -10,7 +10,8 @@
     color: #858585; }
   .patientProfile .patientInfo-Top .backBtn {
     border-right: 1px solid #e1e1e1;
-    padding-right: 10px; }
+    padding-right: 10px;
+    padding-left: 10px; }
     .patientProfile .patientInfo-Top .backBtn button {
       height: 60px;
       border: 1px solid #e1e1e1;
