--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -11,7 +11,7 @@
   .rt-tbody{
     margin-top: 30px;}
   .rt-th {
-    background: #34b8bc !important;
+    background: #8c8c8c !important;
     color: #fff !important;
     text-transform: uppercase;
     font-weight: normal !important;
