sales return and requisition entry design and few functionality done

--- a/client/src/Components/Pharmacy/RequisitionEntry/RequisitionEntry.scss
+++ b/client/src/Components/Pharmacy/RequisitionEntry/RequisitionEntry.scss
@@ -1,4 +1,4 @@
-.hptl-phase1-sales-form {
+.hptl-phase1-requisition-form {
   min-height: 80vh;
   .form-details {
     padding: 5px;
@@ -10,11 +10,8 @@
   }
 
   .form-group {
-    margin-bottom: 0;
-    margin-top: 4px;
-    padding: 0;
-    padding-top: 20px;
-    cursor: pointer;
+    // margin-top: 12vh;
+    padding: 2vh;
   }
 
   .go-button {
