--- a/client/src/Components/Pharmacy/RequisitionEntry/RequisitionItems/RequisitionItems.scss
+++ b/client/src/Components/Pharmacy/RequisitionEntry/RequisitionItems/RequisitionItems.scss
@@ -1,4 +1,9 @@
-.hptl-phase1-item-list-billing-form {
+.hptl-phase1-requisition-item-form {
+  background: #fff;
+  border-radius: 5px;
+}
+
+.hptl-phase1-op-add-billing-form {
   padding-top: 5px;
   .primary-details {
     .primary-box-container {
