--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -92,3 +92,18 @@
     background-size: 100%;
     width: 100px;
     margin-right: 15px; }
+
+.loginFooter {
+  position: fixed;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 0.7rem;
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5); }
+  .loginFooter a {
+    text-decoration: none;
+    color: yellow; }
+  .loginFooter a:hover {
+    text-decoration: underline; }
