--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -123,3 +123,20 @@
     }
   
   }
+  .loginFooter{
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-size: 0.7rem;
+    text-shadow:0 2px 3px rgba(0, 0, 0, 0.5);
+    a{
+    text-decoration: none;
+    color: yellow;
+    }
+    a:hover{
+      text-decoration: underline;
+    }    
+    }
