--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -6,6 +6,14 @@
   }
   .appointment-inner-cntr {
     width: 2900px;
+
+    span.noDoctor{
+    display: inline-block;
+    font-size: 1.4rem;
+    margin: 5% 0 6% 16%;
+    text-align: center;
+    color: #a7a7a7;
+    }
   }
   .my-calendar {
     text-align: center;
