--- a/client/src/Components/Wrapper/spotlight.css
+++ b/client/src/Components/Wrapper/spotlight.css
@@ -51,3 +51,5 @@
   width: 100%;
   max-height: 350px;
   overflow: auto; }
+  #spotlightResultArea .ReactTable {
+    max-height: 349px !important; }
