HPI Popup UI cleanup

--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
@@ -2,4 +2,8 @@
     .ReactTable{
         max-height: 215px!important;
        }
+}#hpi-grid-popup-cntr{
+    .ReactTable{
+        max-height: 315px!important;
+       }
 }
