--- a/client/src/index.css
+++ b/client/src/index.css
@@ -389,7 +389,7 @@
       height: 31px;
       display: inline-block;
       cursor: pointer;
-      margin-right: 7px; }
+      margin-right: 3.3%; }
     :global .pain-scale-ul .pain-1 {
       background-position: 0px 0px; }
     :global .pain-scale-ul .pain-2 {
