--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -569,7 +569,7 @@ $forntSize: 0.7rem;
       height: 31px;
       display: inline-block;
       cursor: pointer;
-      margin-right: 7px;
+      margin-right: 3.3%;
     }
 
     .pain-1 {
