--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
@@ -1,2 +1,5 @@
 #hpi-grid-cntr .ReactTable {
   max-height: 215px !important; }
+
+#hpi-grid-popup-cntr .ReactTable {
+  max-height: 315px !important; }
