--- a/client/src/Components/PatientProfile/Examination/examination.css
+++ b/client/src/Components/PatientProfile/Examination/examination.css
@@ -101,3 +101,10 @@
   -webkit-transition: All 0.3s ease;
   -moz-transition: All 0.3s ease;
   -o-transition: All 0.3s ease; }
+
+#physicalExamination-grid-cntr .ReactTable {
+  max-height: 200px !important; }
+
+.pullRight button {
+  float: right;
+  margin-left: 15px; }
