--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -408,7 +408,7 @@ $forntSize: 0.7rem;
   .customRadio {
     border-bottom: 1px solid #eee;
     padding-bottom: 5px;
-
+    width: 100%;
     .inline {
       display: inline-block;
     }
