--- a/client/src/Components/PatientProfile/Assessment/assessment.css
+++ b/client/src/Components/PatientProfile/Assessment/assessment.css
@@ -3,5 +3,4 @@
   border: 1px solid #d3d3d3;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-  text-align: center; }
+  border-top-right-radius: 5px; }
