--- a/client/src/Components/PatientProfile/patientprofile.css
+++ b/client/src/Components/PatientProfile/patientprofile.css
@@ -172,3 +172,32 @@
   margin: 100px 10px 0;
   z-index: 1;
   width: 100%; }
+
+.moreActionUl {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border: 1px solid #e1e1e1;
+  position: absolute;
+  right: 11px;
+  border-radius: 5px 0px 5px 5px;
+  background: #fff;
+  display: none;
+  min-width: 100px;
+  overflow: hidden; }
+  .moreActionUl li {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    .moreActionUl li span {
+      padding: 7px 10px;
+      text-align: left;
+      font-size: 0.8rem;
+      display: block;
+      cursor: pointer; }
+    .moreActionUl li span:hover {
+      color: #fff;
+      background: #34b8bc; }
+
+.moreAction:hover .moreActionUl {
+  display: block; }
