--- a/client/src/index.css
+++ b/client/src/index.css
@@ -270,7 +270,8 @@
     border-color: #01968c; }
   :global .customRadio {
     border-bottom: 1px solid #eee;
-    padding-bottom: 5px; }
+    padding-bottom: 5px;
+    width: 100%; }
     :global .customRadio .inline {
       display: inline-block; }
     :global .customRadio .inline + .inline {
