--- a/client/src/Components/LabSetup/LabSetup.scss
+++ b/client/src/Components/LabSetup/LabSetup.scss
@@ -1,14 +1,10 @@
 .hims_lab_setup {
   .common-section {
     border: 1px solid #d3d3d3;
-    margin: 10px;
     margin-top: 0px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
-  }
-  .toggle-section {
-    margin: 10px;
-    margin-bottom: 0px;
+    background: #fff;
   }
 }
