--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -1,16 +1,16 @@
 .appointment .appointment-outer-cntr {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   width: 94.8vw; }
 
-.appointment .appointment-inner-cntr {
-  width: 2900px; }
-  .appointment .appointment-inner-cntr span.noDoctor {
-    display: inline-block;
-    font-size: 1.4rem;
-    margin: 5% 0 6% 16%;
-    text-align: center;
-    color: #a7a7a7; }
+.appointment .appointment-inner-cntr span.noDoctor {
+  display: inline-block;
+  font-size: 1.4rem;
+  margin: auto;
+  width: 100%;
+  text-align: center;
+  color: #a7a7a7;
+  padding: 25vh 0; }
 
 .appointment .my-calendar {
   text-align: center;
@@ -79,28 +79,29 @@
 
 .appointment .tg {
   display: inline-block;
-  margin-right: 10px; }
+  margin-right: 5px; }
   .appointment .tg thead tr {
     text-align: center; }
     .appointment .tg thead tr th {
       font-family: Arial, sans-serif;
       font-size: 0.9rem;
-      font-weight: normal;
       overflow: hidden;
+      padding: 3px 0;
+      font-weight: bold;
       word-break: normal;
-      border: 1px solid lightgrey;
-      border-bottom: 1px solid #000;
-      border-top: 1px solid #000; }
+      border: 1px solid #b3823b;
+      color: #ffffff;
+      background: #dcac66; }
     .appointment .tg thead tr .tbl-subHdg {
       text-transform: uppercase;
       font-size: 0.7rem !important;
-      border: 1px solid #009e94 !important;
+      border: 1px solid #e2e2c8 !important;
       background: #fffff4;
       color: #5a5a5a;
       padding: 0;
       width: 120px; }
   .appointment .tg tbody {
-    height: 390px;
+    height: 45vh;
     overflow: auto;
     display: grid; }
     .appointment .tg tbody td.tg-baqh {
@@ -109,14 +110,17 @@
       font-size: 0.8rem;
       overflow: hidden;
       word-break: normal;
-      border: 1px solid #009e94;
-      border-bottom: 1px solid lightgrey;
-      border-top: 1px solid lightgrey;
+      border: 1px solid lightgrey;
       text-align: center;
       position: relative;
       padding: 15px 0 5px 4px;
       height: 55px;
       width: 120px; }
+    .appointment .tg tbody td[colspan]:not([colspan="1"]) {
+      width: 240px;
+      height: 10px;
+      padding: 0;
+      margin: 0; }
     .appointment .tg tbody .dynPatient {
       display: inline-block;
       text-align: left;
