--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -1,18 +1,18 @@
 .appointment {
   .appointment-outer-cntr {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     width: 94.8vw;
   }
   .appointment-inner-cntr {
-    width: 2900px;
-
-    span.noDoctor{
-    display: inline-block;
-    font-size: 1.4rem;
-    margin: 5% 0 6% 16%;
-    text-align: center;
-    color: #a7a7a7;
+    span.noDoctor {
+      display: inline-block;
+      font-size: 1.4rem;
+      margin: auto;
+      width: 100%;
+      text-align: center;
+      color: #a7a7a7;
+      padding: 25vh 0;
     }
   }
   .my-calendar {
@@ -115,7 +115,7 @@
 
   .tg {
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 5px;
 
     thead {
       tr {
@@ -124,17 +124,18 @@
         th {
           font-family: Arial, sans-serif;
           font-size: 0.9rem;
-          font-weight: normal;
           overflow: hidden;
+          padding: 3px 0;
+          font-weight: bold;
           word-break: normal;
-          border: 1px solid lightgrey;
-          border-bottom: 1px solid #000;
-          border-top: 1px solid #000;
+          border: 1px solid #b3823b;
+          color: #ffffff;
+          background: #dcac66;
         }
         .tbl-subHdg {
           text-transform: uppercase;
           font-size: 0.7rem !important;
-          border: 1px solid #009e94 !important;
+          border: 1px solid #e2e2c8 !important;
           background: #fffff4;
           color: #5a5a5a;
           padding: 0;
@@ -143,7 +144,7 @@
       }
     }
     tbody {
-      height: 390px;
+      height: 45vh;
       overflow: auto;
       display: grid;
       td.tg-baqh {
@@ -152,14 +153,18 @@
         font-size: 0.8rem;
         overflow: hidden;
         word-break: normal;
-        border: 1px solid #009e94;
-        border-bottom: 1px solid lightgrey;
-        border-top: 1px solid lightgrey;
+        border: 1px solid lightgrey;
         text-align: center;
         position: relative;
         padding: 15px 0 5px 4px;
         height: 55px;
         width: 120px;
+      }
+      td[colspan]:not([colspan="1"]) {
+        width: 240px;
+        height: 10px;
+        padding: 0;
+        margin: 0;
       }
 
       .dynPatient {
