--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -10,7 +10,7 @@ $black: #000;
   z-index: 999999999;
 }
 .spotlightContainer {
-  width: 700px;
+  width: 80vw;
   position: relative;
   margin: auto;
   box-shadow: 0 25px 60px 10px rgba(0, 0, 0, 0.3);
@@ -59,7 +59,22 @@ $black: #000;
   max-height: 350px;
   overflow: auto;
 
-.ReactTable{
-  max-height: 349px!important;
+  .ReactTable {
+    max-height: 349px !important;
+  }
 }
+
+.helpText {
+  width: 80vw;
+  margin: 10px auto 0;
+  text-align: center;
+  span {
+    background: #000000;
+    border-radius: 20px;
+    color: #fff;
+    font-size: 0.7rem;
+    padding: 3px 10px;
+    text-transform: uppercase;
+    border: 2px solid red;
+  }
 }
