--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -738,6 +738,7 @@ textarea {
     text-transform: uppercase;
     border: 1px solid #d3d3d3;
     border-radius: 4px;
+    background: #fff;
   }
   input[type="date"]::-webkit-calendar-picker-indicator {
     color: rgba(0, 0, 0, 0);
