--- a/client/src/Components/Wrapper/spotlight.css
+++ b/client/src/Components/Wrapper/spotlight.css
@@ -59,10 +59,10 @@
   margin: 10px auto 0;
   text-align: center; }
   .helpText span {
-    background: #000000;
+    background: #e3ac56;
     border-radius: 20px;
     color: #fff;
     font-size: 0.7rem;
     padding: 3px 10px;
     text-transform: uppercase;
-    border: 2px solid red; }
+    border: 2px solid black; }
