--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -69,12 +69,12 @@ $black: #000;
   margin: 10px auto 0;
   text-align: center;
   span {
-    background: #000000;
+    background: #e3ac56;
     border-radius: 20px;
     color: #fff;
     font-size: 0.7rem;
     padding: 3px 10px;
     text-transform: uppercase;
-    border: 2px solid red;
+    border: 2px solid black;
   }
 }
