--- a/client/src/Components/Wrapper/spotlight.css
+++ b/client/src/Components/Wrapper/spotlight.css
@@ -1,22 +1,32 @@
 #spotlight_wrapper {
   position: fixed;
-  top: 15%;
+  top: 0;
+  height: 100%;
   left: 0;
   right: 0;
   width: 100%;
-  display: block;
-  z-index: 999999999; }
+  background: rgba(0, 0, 0, 0.3);
+  display: none;
+  z-index: 999999999;
+  padding-top: 10vh; }
 
 .spotlightContainer {
-  width: 80vw;
+  width: 70vw;
   position: relative;
   margin: auto;
   box-shadow: 0 25px 60px 10px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
+  border-radius: 5px 0 5px 5px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #f8f5f4;
   overflow: hidden;
-  opacity: 1; }
+  opacity: 1;
+  animation: createBox 0.25s; }
+
+@keyframes createBox {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
 
 #spotlightInput {
   display: block;
@@ -55,14 +65,19 @@
     max-height: 349px !important; }
 
 .helpText {
-  width: 80vw;
-  margin: 10px auto 0;
-  text-align: center; }
-  .helpText span {
-    background: #e3ac56;
-    border-radius: 20px;
-    color: #fff;
-    font-size: 0.7rem;
-    padding: 3px 10px;
+  height: 35px;
+  width: 70vw;
+  margin: 0 auto;
+  text-align: right;
+  cursor: pointer; }
+  .helpText .globalSearch-Close {
+    background: #f7f5f4;
+    border-radius: 5px 5px 0 0;
+    color: #8c8c8c;
+    font-size: 1.2rem;
+    padding: 6px 15px;
     text-transform: uppercase;
-    border: 2px solid black; }
+    border: 1px solid #c8c6c5;
+    line-height: 35px;
+    text-shadow: 0 1px 1px #ffffff;
+    cursor: pointer; }
